<resources>
    <string name="app_name">Shareboard</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="open_navigation_drawer">Open</string>
    <string name="close_navigation_drawer">Close</string>
    <string name="actionbar_checkbox_title">selectAll</string>
    <string name="logout">logout</string>
    <string name="exit">Exit</string>
    <string name="exit_warning">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="recyclingbin">Recyclingbin</string>
    <string name="settings">Settings</string>
    <string name="no_response">No Server Response!</string>
    <string name="channel_id">channel</string>

    <string name="username_login">Username or Email</string>
    <string name="login_checkbox">Remember me</string>
    <string name="login">Login</string>
    <string name="login_error_message">Wrong Username or Password!</string>

    <string name="username_register">Username</string>
    <string name="register_checkbox">Agree to shady things</string>
    <string name="email">E-Mail</string>
    <string name="conf_password">Confirm Password</string>
    <string name="fab">FloatingActionButton: Add</string>
    <string name="add">Add</string>
    <string name="register_error_message">Wrong Username or Email or wrong Password!</string>
    <string name="channel_name">notification channel</string>
    <string name="channel_description">channel for notifications</string>
</resources>