<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRecView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"  />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:contentDescription="@string/fab"
            app:maxImageSize="40dp"
            android:src="@drawable/ic_add"
            app:fabCustomSize="80dp"
            app:tint="@color/white"
            android:backgroundTint="@color/purple_500"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainNavviewViewUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_navview_settings_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_settings"
                android:gravity="start"
                android:padding="15dp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:contentDescription="Settings Button"/>

            <Button
                android:id="@+id/main_navview_recbin_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_delete_bin"
                android:gravity="start"
                android:padding="15dp"
                android:text="@string/recyclingbin"
                android:textColor="@color/black"
                android:contentDescription="Recyclebin Button"/>

            <Button
                android:id="@+id/main_navview_logout_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_logout"
                android:gravity="start"
                android:padding="15dp"
                android:contentDescription="Logout Button"
                android:text="@string/logout"
                android:textColor="@color/red"/>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>